--- a/Customer-Churn.ipynb
+++ b/Customer-Churn.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0450f64e",
+   "metadata": {},
+   "source": [
+    "First Five Rows of Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0c165740",
@@ -74,6 +82,39 @@
     "\n",
     "df = pd.read_csv('Customer-Churn-Records.csv')\n",
     "df.head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecac6a1b",
+   "metadata": {},
+   "source": [
+    "Columns of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8f32287f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['RowNumber', 'CustomerId', 'Surname', 'CreditScore', 'Geography',\n",
+       "       'Gender', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard',\n",
+       "       'IsActiveMember', 'EstimatedSalary', 'Exited', 'Complain',\n",
+       "       'Satisfaction Score', 'Card Type', 'Point Earned'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   }
  ],
