--- a/Customer-Churn.ipynb
+++ b/Customer-Churn.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "a4fc7323",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
    "id": "0341e9e9",
    "metadata": {},
    "source": [
-    "Thank you"
+    "                                        THANK YOU!!!!!!"
    ]
   }
  ],
